sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value getvaleur
	while (getvaleur(j-1)<temp && j>0 ) {
               ^